[package]
name = "tcp-stress"
version = "0.1.0"
edition = "2021"

[dependencies]
fleek-crypto = { git = "https://github.com/fleek-network/lightning" }
tokio = { version = "1.9", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
bincode = "1.3"
bytes = "1.5"
arrayref = "0.3"
anyhow = "1.0"
serde = "1.0"
